Added wallet controller
